my first commit in assignment-01: it contains: -index.html -style.css -new folder (img) + .jpg added

--- a/index.html
+++ b/index.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Assignment_01</title>
-    <link rel="stylesheet" href="style.css"/>
-  </head>
-  <body>
-    <h1>Assignment_01 - Welcome</h1>
+<!-- I set the language into english, this is how a comment would look like in html. -->
+<html lang="en"> 
 
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="This is a webpage about Maximilian Elixhauser.">
+  <title>Assignment_01</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header> 
+    <!-- container for the "header" -->
+    <h1>Assignment_01 - Welcome</h1>
+  </header>
+
+  <main> 
+    <!-- container for the "main" -->
     <h2>What is your name?</h2>
     <p>
-      <!-- TODO(you): Enter your answer here -->
+      Maximilian Elixhauser
     </p>
-
     <h2>What is a fun fact about yourself?</h2>
     <p>
-      <!-- TODO(you): Enter your answer here -->
+      I often stumble upon new experiences or opportunities that I didn't necessarily plan for,
+      but end up thoroughly enjoying. And.. I sometimes have too much luck.
     </p>
-
     <h2>What do you look like?</h2>
-    <!-- TODO(you): Add a picture of yourself or of something that represents yourself. -->
+  <figure>
+    <img src="img/elixhauser_professional.JPG" alt="An image of myself." width="250" height="300">
+    <!-- Added a caption to the image. -->
+    <figcaption>Much professionalism, much wow.</figcaption> 
+  </figure>
+</main>
 
-  </body>
+  <footer> 
+    <!-- container for the "footer" -->
+    <p>
+      <a>Yeah, that's about it. :)</a>
+    </p>
+  </footer>
+
+</body>
 </html>
